[metadata]
name = pwnc
version = 0.0.1
author = Joe Hilbert
author_email = jhilbs3@gmail.com
description = A package for automating libc exploitation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jhilbs3/pwnc
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    urllib3

[options.packages.find]
where = src
